# downgrangefixtures_ical

./: README.md  base_table.csv  fixtures.csv  fixtures.ics  main.py  pyproject.toml  results.csv  results_2024.csv  table.csv
.github/workflows/: python-app.yml
