[tool.poetry]
name = "thefafixturecalendar"
version = "0.1.0"
description = ""
authors = ["Karl Hudgell <karl.hudgell@bjss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
icalendar = "^5.0.11"
pandas = "1.5.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
